--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=PickACard
+application.title=ahmed_hashmi_ex1
 application.vendor=haki
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -29,7 +29,7 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/PickACard.jar
+dist.jar=${dist.dir}/ahmed_hashmi_ex1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
@@ -66,7 +66,7 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 jlink.launcher=false
-jlink.launcher.name=PickACard
+jlink.launcher.name=ahmed_hashmi_ex1
 main.class=pickacard.CardTrick
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
